<resources>
    <string name="app_name">NUMAD22Sp_SaurabhGade</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="PressText">Pressed: - </string>
    <string name="helloWorld">Hello World!</string>
    <string name="aboutMe">About Me</string>
    <string name="clicky">Clicky Clicky</string>
    <string name="myName">Saurabh Gade</string>
    <string name="myEmail">gade.sau@northeastern.edu</string>
    <string name="linkCollectorBtnText">Link Collector</string>
    <string name="todo">addItem</string>
    <string name="dialog_message">Hello</string>
    <string name="dialog_title">Test</string>
    <string name="link">Link</string>
    <string name="url_name">URL Name</string>
    <string name="locationBtn">Get Location</string>
    <string name="NULogo">NU Logo</string>
    <string name="locationDisplayBox">locationDisplayView</string>
    <string name="Latitude">Latitude</string>
    <string name="Longitude">Longitude</string>
    <string name="Api">Connect to API</string>
    <string name="movie_name">Enter Movie Name</string>



</resources>